--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.16MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-455.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-5.84MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
-  - {name: 🇨🇦 加拿大-1020.8KB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-1.28MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
+  - {name: 🇨🇦 加拿大-502.9KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-518.2KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇫🇷 法国-520.9KB/s(Youtube:不良林), server: 51.38.118.42, port: 819, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-1.02MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-328.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-332.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.42MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-455.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1020.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-502.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-518.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-520.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-332.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-455.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1020.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-502.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-518.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-520.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-332.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-455.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1020.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-502.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-518.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-520.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-332.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-455.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1020.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-502.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-518.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-520.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-332.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-455.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1020.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-502.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-518.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-520.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-332.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-455.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1020.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-502.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-518.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-520.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-332.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-455.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1020.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-502.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-518.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-520.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-328.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-332.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
